--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,11 +8,11 @@ androidxroom = "2.5.0-alpha02"
 androidxwork = "2.8.0-alpha03"
 com-google-android-horologist = "0.1.3"
 googledagger = "2.43.2"
-kotlin = "1.7.0"
+kotlin = "1.7.10"
 kotlinx = "1.6.4"
-squareupokhttp3 = "5.0.0-alpha.7"
+squareupokhttp3 = "5.0.0-alpha.10"
 squareupretrofit2 = "2.9.0"
-wearcompose = "1.0.0"
+wearcompose = "1.1.0-alpha03"
 weartiles = "1.1.0-rc01"
 
 [libraries]
