--- a/wear/src/benchmark/AndroidManifest.xml
+++ b/wear/src/benchmark/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.wear.soyted">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
         <!--suppress AndroidElementNotAllowed -->
