--- a/.github/workflows/androidtest.yml
+++ b/.github/workflows/androidtest.yml
@@ -18,9 +18,40 @@ jobs:
           distribution: 'zulu'
           java-version: 11
 
+      - name: Gradle Cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/**.gradle.kts', '**/gradle/wrapper/gradle-wrapper.properties', '**/libs.versions.toml') }}
+
+      - name: AVD cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.android/avd
+          key: ${{ runner.os }}-avd-v1
+
+      # Create a new emulator snapshot if it isn't present in the cache.
+      - name: Create AVD snapshot
+        if: steps.avd-cache.outputs.cache-hit != 'true'
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 30
+          target: android-wear
+          disable-animations: false
+          force-avd-creation: false
+          ram-size: 4096M
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          script: echo "Generated AVD snapshot."
+
       - name: Wear Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 30
           target: android-wear
+          disable-animations: false
+          force-avd-creation: false
+          ram-size: 4096M
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -no-snapshot-save
           script: ./gradlew wear:connectedAndroidTest
