--- a/.github/workflows/androidtest.yml
+++ b/.github/workflows/androidtest.yml
@@ -6,6 +6,10 @@ on:
       - main
   pull_request:
 
+env:
+  # Increment this to manually invalidate the cache.
+  CACHE_VERSION: 1
+
 jobs:
   androidTest:
     runs-on: buildjet-2vcpu-ubuntu-2204
@@ -25,7 +29,7 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/**.gradle.kts', '**/gradle/wrapper/gradle-wrapper.properties', '**/libs.versions.toml') }}
+          key: ${{ runner.os }}-gradle-${{ env.CACHE_VERSION }}-${{ hashFiles('**/**.gradle.kts', '**/gradle/wrapper/gradle-wrapper.properties', '**/libs.versions.toml') }}
 
       - name: AVD cache
         uses: actions/cache@v3
@@ -34,11 +38,11 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: ${{ runner.os }}-avd-v2
+          key: ${{ runner.os }}-avd-${{ env.CACHE_VERSION }}
 
       # Create a new emulator snapshot if it isn't present in the cache.
       - name: Create AVD snapshot
-        if: steps.avd-cache.outputs.cache-hit != 'true'
+        if: ${{ steps.avd-cache.outputs.cache-hit != 'true' }}
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 30
