--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,29 +1,30 @@
 [versions]
-androidx-compose-ui = "1.2.1"
+androidx-compose-ui = "1.4.0-alpha04"
 androidx-hilt = "1.0.0"
 androidx-lifecycle = "2.5.1"
 androidx-test-ext = "1.1.5"
 androidx-wear-watchface = "1.1.1"
-androidxroom = "2.5.0-alpha03"
-androidxwork = "2.8.0-alpha04"
+androidxroom = "2.5.0"
+androidxwork = "2.8.0-rc01"
+compose-compiler = "1.4.0"
 com-google-android-horologist = "0.3.0"
-googledagger = "2.44"
+googledagger = "2.44.2"
 kotlin = "1.8.0"
 kotlinx = "1.6.4"
-squareupokhttp3 = "5.0.0-alpha.10"
+squareupokhttp3 = "5.0.0-alpha.11"
 squareupretrofit2 = "2.9.0"
-wearcompose = "1.1.0-alpha06"
+wearcompose = "1.2.0-alpha03"
 weartiles = "1.1.0"
 
 [libraries]
-accompanist-swiperefresh = "com.google.accompanist:accompanist-swiperefresh:0.25.1"
+accompanist-swiperefresh = "com.google.accompanist:accompanist-swiperefresh:0.28.0"
 androidx-benchmarkmacro = "androidx.benchmark:benchmark-macro-junit4:1.1.1"
 androidx-corektx = "androidx.core:core-ktx:1.9.0"
 androidx-lifecycleruntimektx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle" }
 androidx-metrics-performance = "androidx.metrics:metrics-performance:1.0.0-alpha03"
 assertj-core = "org.assertj:assertj-core:3.23.1"
 coil-compose = "io.coil-kt:coil-compose:2.2.2"
-compose-compiler = "androidx.compose.compiler:compiler:1.3.2"
+compose-compiler = "androidx.compose.compiler:compiler:1.4.0"
 compose-materialiconscore = "androidx.compose.material:material-icons-core:1.2.1"
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose-ui" }
 compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-compose-ui" }
@@ -82,9 +83,9 @@ work-runtimektx = { module = "androidx.work:work-runtime-ktx", version.ref = "an
 work-testing = { module = "androidx.work:work-testing", version.ref = "androidxwork" }
 
 [plugins]
-androidapplication = "com.android.application:7.4.0-rc01"
-androidlibrary = "com.android.library:7.4.0-beta02"
-androidtest = "com.android.test:7.4.0-beta02"
+androidapplication = "com.android.application:7.4.0"
+androidlibrary = "com.android.library:7.4.0"
+androidtest = "com.android.test:7.4.0"
 firebase = "com.google.gms.google-services:4.3.14"
 firebasecrashlytics = "com.google.firebase.crashlytics:2.9.2"
 firebaseperformance = "com.google.firebase.firebase-perf:1.4.2"
