--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,10 +3,10 @@ androidx-compose-ui = "1.5.0-alpha03"
 androidx-hilt = "1.0.0"
 androidx-lifecycle = "2.6.1"
 androidx-test-ext = "1.1.5"
-androidx-wear-watchface = "1.1.1"
+androidx-wear-watchface = "1.2.0-alpha08"
 androidxroom = "2.5.1"
 androidxwork = "2.8.1"
-compose-compiler = "1.4.3"
+compose-compiler = "1.4.6"
 com-google-android-horologist = "0.4.1"
 core-android = "0.85.0"
 firebase-analytics = "21.2.2"
@@ -17,12 +17,12 @@ gradle = "8.0.0"
 kotlin = "1.8.20"
 kotlinx = "1.6.4"
 kotlinx-datetime-jvm = "0.4.0"
-ksp = "1.8.10-1.0.9"
+ksp = "1.8.20-1.0.11"
 retrofit2-kotlinx-serialization-converter = "1.0.0"
-ktor-serialization-kotlinx-xml = "2.2.4"
-ktor-client-content-negotiation = "2.2.4"
-ktor-client-android = "2.2.4"
-ktor-client-okhttp = "2.2.4"
+ktor-serialization-kotlinx-xml = "2.3.0"
+ktor-client-content-negotiation = "2.3.0"
+ktor-client-android = "23.0"
+ktor-client-okhttp = "2.3.0"
 serialization-android = "0.85.0"
 squareupokhttp3 = "5.0.0-alpha.11"
 squareupretrofit2 = "2.9.0"
@@ -78,7 +78,6 @@ kotlinx-datetime-jvm = { module = "org.jetbrains.kotlinx:kotlinx-datetime-jvm", 
 retrofit2-kotlinx-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version.ref = "retrofit2-kotlinx-serialization-converter" }
 ktor-serialization-kotlinx-xml = { module = "io.ktor:ktor-serialization-kotlinx-xml", version.ref = "ktor-serialization-kotlinx-xml" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor-client-content-negotiation" }
-ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor-client-android" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor-client-okhttp" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidxroom" }
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "androidxroom" }
@@ -109,12 +108,12 @@ work-testing = { module = "androidx.work:work-testing", version.ref = "androidxw
 
 [plugins]
 androidapplication = "com.android.application:8.0.0"
-androidlibrary = "com.android.library:7.4.2"
+androidlibrary = "com.android.library:8.0.0"
 androidtest = "com.android.test:8.0.0"
 firebase = "com.google.gms.google-services:4.3.15"
 firebasecrashlytics = "com.google.firebase.crashlytics:2.9.4"
 firebaseperformance = "com.google.firebase.firebase-perf:1.4.2"
 hilt = "com.google.dagger.hilt.android:2.45"
-kotlinandroid = "org.jetbrains.kotlin.android:1.8.10"
-kotlinkapt = "org.jetbrains.kotlin.kapt:1.8.10"
+kotlinandroid = "org.jetbrains.kotlin.android:1.8.20"
+kotlinkapt = "org.jetbrains.kotlin.kapt:1.8.20"
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
