--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,44 +1,46 @@
 [versions]
-androidx-compose-ui = "1.5.0-alpha03"
+androidx-compose-ui = "1.5.0-beta02"
 androidx-hilt = "1.0.0"
 androidx-lifecycle = "2.6.1"
 androidx-test-ext = "1.1.5"
 androidx-wear-watchface = "1.2.0-alpha08"
 androidxroom = "2.5.1"
 androidxwork = "2.8.1"
-compose-compiler = "1.4.6"
-com-google-android-horologist = "0.4.1"
+compose-compiler = "1.4.7"
+com-google-android-horologist = "0.4.10"
 core-android = "0.85.0"
-firebase-analytics = "21.2.2"
-firebase-crashlytics = "18.3.6"
+firebase-analytics = "21.3.0"
+firebase-crashlytics = "18.3.7"
 google-services = "4.3.15"
-googledagger = "2.45"
-gradle = "8.0.0"
-kotlin = "1.8.20"
-kotlinx = "1.6.4"
+googledagger = "2.46.1"
+gradle = "8.0.2"
+kotlin = "1.8.21"
+kotlinx = "1.7.1"
 kotlinx-datetime-jvm = "0.4.0"
-ksp = "1.8.20-1.0.11"
+ksp = "1.8.21-1.0.11"
+protolayout-material = "1.0.0-alpha11"
 retrofit2-kotlinx-serialization-converter = "1.0.0"
 ktor-serialization-kotlinx-xml = "2.3.0"
 ktor-client-content-negotiation = "2.3.0"
 ktor-client-android = "23.0"
-ktor-client-okhttp = "2.3.0"
+ktor-client-okhttp = "2.3.1"
 serialization-android = "0.85.0"
 squareupokhttp3 = "5.0.0-alpha.11"
 squareupretrofit2 = "2.9.0"
-wearcompose = "1.2.0-alpha09"
+wearcompose = "1.2.0-beta02"
 weartiles = "1.1.0"
 
 [libraries]
 accompanist-swiperefresh = "com.google.accompanist:accompanist-swiperefresh:0.28.0"
 androidx-benchmarkmacro = "androidx.benchmark:benchmark-macro-junit4:1.1.1"
-androidx-corektx = "androidx.core:core-ktx:1.10.0"
+androidx-corektx = "androidx.core:core-ktx:1.10.1"
 androidx-lifecycleruntimektx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle" }
 androidx-metrics-performance = "androidx.metrics:metrics-performance:1.0.0-alpha04"
+androidx-protolayout-material = { module = "androidx.wear.protolayout:protolayout-material", version.ref = "protolayout-material" }
 assertj-core = "org.assertj:assertj-core:3.24.2"
-coil-compose = "io.coil-kt:coil-compose:2.3.0"
-compose-compiler = "androidx.compose.compiler:compiler:1.4.6"
-compose-materialiconscore = "androidx.compose.material:material-icons-core:1.4.2"
+coil-compose = "io.coil-kt:coil-compose:2.4.0"
+compose-compiler = "androidx.compose.compiler:compiler:1.4.7"
+compose-materialiconscore = "androidx.compose.material:material-icons-core:1.4.3"
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose-ui" }
 compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-compose-ui" }
 compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-compose-ui" }
@@ -49,9 +51,9 @@ dagger-hiltandroidcompiler = { module = "com.google.dagger:hilt-android-compiler
 dagger-hiltandroidtesting = { module = "com.google.dagger:hilt-android-testing", version.ref = "googledagger" }
 dagger-hiltcompiler = { module = "com.google.dagger:hilt-compiler", version.ref = "googledagger" }
 fastlane-screengrab = "tools.fastlane:screengrab:2.1.1"
-firebase-analytics = "com.google.firebase:firebase-analytics-ktx:21.2.2"
-firebase-crashlytics = "com.google.firebase:firebase-crashlytics-ktx:18.3.6"
-firebase-performance = "com.google.firebase:firebase-perf-ktx:20.3.1"
+firebase-analytics = "com.google.firebase:firebase-analytics-ktx:21.3.0"
+firebase-crashlytics = "com.google.firebase:firebase-crashlytics-ktx:18.3.7"
+firebase-performance = "com.google.firebase:firebase-perf-ktx:20.3.3"
 gms-playserviceswearable = "com.google.android.gms:play-services-wearable:18.0.0"
 google-firebase-analytics = { module = "com.google.firebase:firebase-analytics", version.ref = "firebase-analytics" }
 google-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics", version.ref = "firebase-crashlytics" }
